app/src/main/java/com/example/eltory/rejectcall/SetBlock.java
package com.example.eltory.rejectcall;

/**
 * Created by eltor on 2017-06-12.
 */
public class SetBlock {
}
